--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,9 @@
+//* {
+  outline-width: 1px;
+  outline-style: solid;
+  outline-color: green;
+}*//
+
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -6,7 +12,23 @@
   /* выше установили ограничение по максимальной ширине */
   margin: 0 auto;
   /* выше для экранов больше 1600px отцентрировали весь контент */
-  font-family: 'Helvetica Neue', Arial, sans-serif;
+  font-family: 'Helvetica Neue', 'Arial', 'sans-serif';
+}
+
+.flex-column {
+  display:flex;
+  flex-direction: column;
+}
+
+.flex-row {
+  display:flex;
+  flex-direction:row;
+}
+
+.list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 .header {
@@ -14,18 +36,325 @@
   min-height: 600px;
   max-height: 756px;
   /* выше установили ограничения для секции */
+  position: relative;
+  background-color: #f2f2f2;
+}
+
+.logo {
+  width: 183px;
+  height: 32px;
+  z-index: 1;
+}
+
+.logo_place_header {
+  position: absolute;
+  top:30px;
+  left:64px;
+  background-image: url(../images/logo_place_header.svg);
+}
+
+.header__title {
+  width: 730px;
+  align-self: center;
+  padding-left: 64px;
+  font-size: 102px;
+  font-weight: bold;
+  line-height: 96px;
+}
+
+.header__subtitle {
+  width: 388px;
+  position:absolute;
+  bottom: 30px;
+  left:64px;
+  font-size: 18px;
+  line-height: 25px; 
+}
+
+.header__link {
+  text-decoration: none;
+}
+
+.header__main-illustration {
+  width: 765px;
+  height:608px;
+  position:absolute;
+  bottom:0;
+  right:0;
+  z-index:1;
 }
 
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
 .header__square-pic {
   height: 568px;
   width: 568px;
+  background-color:#2f80ed;
+  position:absolute;
+  right:0;
+  top:64px;
+  z-index:0;
+}
+
+.description__two-columns {
+  display:flex;
+  width: 80%;
+  align-self: center;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  justify-content: space-between;
+}
+
+.two-columns__brief {
+  margin:0;
+  align-self: stretch;
+  width:175px;
+  line-height: 1.2;
+  font-size: 18px;
+  color: #2f80ed;
+}
+
+.two-columns__text-right {
+  width:80%;
+  min-width: 784px;
+  line-height: 34px;
+  font-size: 24px;
+}
+
+.span-accent {
+  font-weight: bold;
+}
+
+.two-columns__paragraph:nth-of-type(2n) {
+  margin: 30px 0 30px 0;
+}
+
+.digits {
+  margin: 100px auto;
+}
+
+.digits__title {
+  align-self:center;
+  margin: 0;
+  width:60%;
+  text-align: center;
+  line-height: 69px;
+  font-size: 60px;
+  font-weight: bold;
+}
+
+.digits__subtitle {
+  align-self:center;
+  margin: 20px 0 60px 0;
+  text-align: center;
+  line-height: 34px;
+  font-size: 24px;
+}
+
+.table {
+  display:flex;
+  align-self: center;
+  margin:0 auto 0 auto;
+  width: 1100px;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.table__cell {
+  width: 250px;
+  margin-top: 60px;
+}
+
+.table__heading {
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: bold;
+  margin:0;
+}
+
+.table__text {
+  margin:20px 0 0 0;
+  line-height: 1.2;
+  font-size: 18px;
+}
+
+.feynman {
+  height: 790px;
+  margin: 100px 0 0 0;
+  background-image: url(../images/feynman.png);
+  background-repeat: no-repeat;
+  background-size: 867px 637px;
+  background-position: left bottom;
+  position: relative;
+  background-color: #f2f2f2;
+}
+
+.feynman__title {
+  margin:0;
+  width: 648px;
+  text-align: center;
+  align-self: center;
+  line-height: 1.15;
+  font-size: 120px;
+}
+
+.feynman__subtitle {
+  margin: 70px 0 0 0;
+  align-self: center;
+  line-height: 51px;
+  font-size: 36px;
+}
+
+.feynman__link {
+  position: absolute;
+  top: 50%;
+  right: 48px;
+  line-height: 51px;
+  font-size: 36px;
+  color: black;
+  text-decoration: none;
 }
 
 /* и элемента с модификатором вида ключ-значение */
+
+.kaufman {
+  background-color: #1f1f1f;
+  position:relative;
+  overflow: hidden;
+}
+
+.section-title {
+  align-self: center;
+  text-align: center;
+  font-weight: bold;
+}
+
+.section-title_theme_dark {
+  width: 60%;
+  margin: 90px 0 20px 0;
+  color: white;
+  line-height: 69px;
+  font-size: 60px;
+  z-index: 1;
+}
+
+.section-subtitle {
+  align-self: center;
+  text-align: center;
+}
+
+.section-subtitle_theme_dark {
+  width: 60%;
+  margin: 0;
+  color: white;
+  line-height: 34px;
+  font-size: 24px;
+  z-index: 1;
+}
+
+.kaufman__triangle {
+  background-image: url(../images/kaufman-triangle.svg);
+  width: 877px;
+  height: 877px;
+  background-position: right top;
+  z-index: 0;
+  position:absolute;
+  right: -210px;
+}
+
+.table_theme_dark {
+  margin: 80px auto 90px auto;
+  z-index: 1;
+}
+
 .table__cell_theme_dark {
   width: 200px;
   color: white;
   margin-right: 0;
   margin-top: 80px;
+  z-index: 1;
+}
+
+.table__heading_theme_dark {
+  color:white;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: bold;
+  z-index: 1;
+}
+
+.table__text_theme_dark {
+  color:white;
+  line-height: 1.2;
+  font-size: 18px;
+  z-index: 1;
+}
+
+.footer {
+  margin:0;
+  min-height: 350px;
+  background-color: #1f1f1f;
+  justify-content: center;
+}
+
+.footer__columns {
+  width: 90%;
+  align-self: center;
+  margin: 60px 0 40px 0;
+  justify-content: space-between;
+}
+
+.footer__column {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.footer__column_content_copyright {
+flex-basis: 711px;
+}
+
+.logo_place_footer {
+  margin:0;
+  align-self: flex-start;
+  background-image: url(../images/logo_place_footer.svg);
+}
+
+.footer__author {
+  margin:0;
+  align-self: baseline;
+  color: white;
+  line-height: 25px;
+  font-size: 18px;
+}
+
+.footer__column-heading {
+  margin:0 0 20px 0;
+  align-self: flex-start;
+  color: white;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.footer__column-links {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin: 0 0 16px 0;
+  color:white;
+  text-decoration: none;
+  line-height: 30px;
+  font-size: 18px;
+}
+
+.footer__link {
+  color:white;
+  text-decoration: none;
+}
+
+.footer__social-icon {
+  margin:0 10px 0 0;
+  width: 16px;
+  height: 16px;
+  align-self: center;
 }
