--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,8 @@
-//* {
+/* {
   outline-width: 1px;
   outline-style: solid;
   outline-color: green;
-}*//
+}*/
 
 .page {
   min-width: 1100px;
@@ -12,7 +12,7 @@
   /* выше установили ограничение по максимальной ширине */
   margin: 0 auto;
   /* выше для экранов больше 1600px отцентрировали весь контент */
-  font-family: 'Helvetica Neue', 'Arial', 'sans-serif';
+  font-family: 'Helvetica Neue', 'Arial', sans-serif;
 }
 
 .flex-column {
