--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,11 @@
 /* {
+ 
   outline-width: 1px;
+ 
   outline-style: solid;
+ 
   outline-color: green;
+ 
 }*/
 
 .page {
@@ -15,23 +19,11 @@
   font-family: 'Helvetica Neue', 'Arial', sans-serif;
 }
 
-.flex-column {
-  display:flex;
-  flex-direction: column;
-}
 
-.flex-row {
-  display:flex;
-  flex-direction:row;
-}
-
-.list {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
 
 .header {
+  display:flex;
+  flex-direction:row;
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
@@ -95,8 +87,14 @@
   z-index:0;
 }
 
-.description__two-columns {
+.description {
   display:flex;
+  flex-direction: column;
+}
+
+.two-columns {
+  display:flex;
+  flex-direction: row;
   width: 80%;
   align-self: center;
   margin-top: 100px;
@@ -113,7 +111,7 @@
   color: #2f80ed;
 }
 
-.two-columns__text-right {
+.two-columns__main-text {
   width:80%;
   min-width: 784px;
   line-height: 34px;
@@ -124,12 +122,19 @@
   font-weight: bold;
 }
 
+.two-columns__paragraph {
+  padding: 0;
+  margin: 0;
+}
+
 .two-columns__paragraph:nth-of-type(2n) {
   margin: 30px 0 30px 0;
 }
 
 .digits {
   margin: 100px auto;
+  display:flex;
+  flex-direction: column;
 }
 
 .digits__title {
@@ -179,13 +184,15 @@
 
 .feynman {
   height: 790px;
-  margin: 100px 0 0 0;
+  padding: 100px 0 0 0;
   background-image: url(../images/feynman.png);
   background-repeat: no-repeat;
   background-size: 867px 637px;
   background-position: left bottom;
   position: relative;
   background-color: #f2f2f2;
+  display:flex;
+  flex-direction: column;
 }
 
 .feynman__title {
@@ -220,6 +227,8 @@
   background-color: #1f1f1f;
   position:relative;
   overflow: hidden;
+  display:flex;
+  flex-direction: column;
 }
 
 .section-title {
@@ -290,16 +299,19 @@
 }
 
 .footer {
-  margin:0;
-  min-height: 350px;
   background-color: #1f1f1f;
+  display:flex;
+  flex-direction: column;
+  padding: 60px 0 40px 0;
   justify-content: center;
 }
 
 .footer__columns {
+  display:flex;
+  flex-direction:row;
   width: 90%;
+  min-height: 250px;
   align-self: center;
-  margin: 60px 0 40px 0;
   justify-content: space-between;
 }
 
@@ -307,6 +319,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  margin:0;
 }
 
 .footer__column_content_copyright {
@@ -327,8 +340,18 @@ flex-basis: 711px;
   font-size: 18px;
 }
 
+.footer__column_content_info {
+  display:flex;
+  justify-content: flex-start;
+}
+
+.footer__column_content_social {
+  display:flex;
+  justify-content: flex-start;
+}
+
 .footer__column-heading {
-  margin:0 0 20px 0;
+  margin:0;
   align-self: flex-start;
   color: white;
   line-height: 30px;
@@ -340,7 +363,7 @@ flex-basis: 711px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin: 0 0 16px 0;
+  margin: 20px 0 16px 0;
   color:white;
   text-decoration: none;
   line-height: 30px;
@@ -350,6 +373,9 @@ flex-basis: 711px;
 .footer__link {
   color:white;
   text-decoration: none;
+  display:flex;
+  flex-direction:row;
+  margin:0;
 }
 
 .footer__social-icon {
