--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,4 @@
-/* {
+* {
  
   outline-width: 1px;
  
@@ -6,7 +6,7 @@
  
   outline-color: green;
  
-}*/
+}
 
 .page {
   min-width: 1100px;
@@ -65,6 +65,7 @@
 
 .header__link {
   text-decoration: none;
+  color: #2f80ed;
 }
 
 .header__main-illustration {
@@ -88,17 +89,14 @@
 }
 
 .description {
-  display:flex;
-  flex-direction: column;
+  margin: 100px 0 100px 0;
 }
 
 .two-columns {
   display:flex;
   flex-direction: row;
   width: 80%;
-  align-self: center;
-  margin-top: 100px;
-  margin-bottom: 100px;
+  margin: 100px auto 100px auto;
   justify-content: space-between;
 }
 
@@ -118,7 +116,7 @@
   font-size: 24px;
 }
 
-.span-accent {
+.two-columns__span-accent {
   font-weight: bold;
 }
 
@@ -132,7 +130,7 @@
 }
 
 .digits {
-  margin: 100px auto;
+  margin: 100px 0;
   display:flex;
   flex-direction: column;
 }
@@ -368,6 +366,12 @@ flex-basis: 711px;
   text-decoration: none;
   line-height: 30px;
   font-size: 18px;
+}
+
+.footer__links-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 .footer__link {
