--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -6,8 +6,8 @@
  
   outline-color: green;
  
-}
-*/
+}*/
+
 .root {
     min-width: 1100px;
     /* мы ещё не умеем делать мобильную версию сайта, */
