--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -4,6 +4,7 @@
 @import url(./__title/cards__title.css);
 
 .cards {
+    padding:0;
     margin: 0 auto 0 auto;
     width: 920px;
     display: grid;
