--- a/blocks/video/__iframe/video__iframe.css
+++ b/blocks/video/__iframe/video__iframe.css
@@ -1,6 +1,8 @@
 .video__iframe{
     margin: 0;
     border: none;
+    width: 513px;
+    height: 316px;
 }
 .video__iframe:nth-of-type(2n) {
     margin: 0 0 0 20px;
