--- a/page/index.css
+++ b/page/index.css
@@ -1,3 +1,4 @@
+@import url(../vendor/normalize.css);
 @import url(../blocks/root/root.css);
 @import url(../blocks/description/description.css);
 @import url(../blocks/digits/digits.css);
